--- a/data/blog/test-with-jest-in-reactjs.mdx
+++ b/data/blog/test-with-jest-in-reactjs.mdx
@@ -3,7 +3,7 @@ title: Testes com Jest no ReactJS
 date: '2023-07-02'
 tags: ['ReactJs', 'Testes', 'Front-end']
 draft: false
-summary: 'SQL é uma linguagem padrão para acessar e manipular bancos de dados e nesse post faremos uma breve introdução sobre ela.'
+summary: 'Nesse post exploramos o uso do Jest para testes no ReactJS, abordando a instalação, exemplos de testes para componentes básicos, com estado e propriedades, e chamadas assíncronas. O Jest simplifica o processo de teste, garantindo a correta funcionalidade do código.'
 ---
 
 # Introdução
