--- a/data/blog/ci-cd-in-react.mdx
+++ b/data/blog/ci-cd-in-react.mdx
@@ -3,7 +3,7 @@ title: Implementando CI/CD para Aplicações React - Agilidade e Qualidade no Pr
 date: '2023-07-09'
 tags: ['ReactJs', 'CI/CD', 'Front-end']
 draft: false
-summary: 'Nesse post exploramos o uso do Jest para testes no ReactJS, abordando a instalação, exemplos de testes para componentes básicos, com estado e propriedades, e chamadas assíncronas. O Jest simplifica o processo de teste, garantindo a correta funcionalidade do código.'
+summary: 'Nesse post exploramos a implementação de CI/CD em projetos React, que é uma prática fundamental para garantir um processo de desenvolvimento ágil, confiável e de alta qualidade.'
 ---
 
 # Introdução
