--- a/data/blog/redux-react.mdx
+++ b/data/blog/redux-react.mdx
@@ -139,6 +139,8 @@ export default connect(mapStateToProps, mapDispatchToProps)(Counter)
 
 Neste exemplo, o componente `Counter` é conectado ao Redux usando a função `connect`. Ele recebe o estado do contador do Redux através da função `mapStateToProps` e as ações de incremento e decremento são despachadas através da função `mapDispatchToProps`.
 
+## Conclussão
+
 Espero que esta introdução ao Redux no React tenha lhe proporcionado uma visão geral do uso dessa poderosa biblioteca de gerenciamento de estado. Com o Redux, você pode criar aplicações React mais escaláveis e fáceis de manter.
 
 Se você quiser se aprofundar mais no Redux, recomendo consultar a documentação oficial e explorar projetos e tutoriais adicionais.
