--- a/data/blog/toggle-theme.mdx
+++ b/data/blog/toggle-theme.mdx
@@ -209,7 +209,7 @@ export default MyApp
 
 Aqui, envolvemos o componente principal da aplicação com o `ThemeProviderWrapper`, fornecendo o contexto do tema para todos os componentes.
 
-Passo 9: Crie a página inicial
+## Passo 9: Crie a página inicial
 
 Dentro da pasta `pages`, crie um arquivo chamado `index.jsx` e adicione o seguinte código:
 
