fix: add images in post blog

--- a/data/blog/toggle-theme.mdx
+++ b/data/blog/toggle-theme.mdx
@@ -1,9 +1,12 @@
 ---
 title: Desenvolvendo uma aplicação com light e dark theme usando Next.js
 date: '2023-07-14'
+lastmod: '2023-07-12'
 tags: ['Styled Components', 'Next.Js', 'Front-end', 'Tailwind']
 draft: false
 summary: 'Neste artigo, vamos explorar como fazer uma aplicação em Next.Js com um tema light e um tema dark.'
+images: ['/static/images/toggle-theme/Banner-toggle-theme.png']
+authors: ['Anderson André']
 ---
 
 # Introdução
