--- a/data/blog/toggle-theme.mdx
+++ b/data/blog/toggle-theme.mdx
@@ -4,9 +4,8 @@ date: '2023-07-12'
 lastmod: '2023-07-14'
 tags: ['Styled Components', 'Next.Js', 'Front-end', 'Tailwind']
 draft: false
-summary: 'Neste artigo, vamos explorar como fazer uma aplicação em Next.Js com um tema light e um tema dark.'
+summary: 'Neste post, vamos explorar como fazer uma aplicação em Next.Js com um tema light e um tema dark.'
 images: ['/static/images/toggle-theme/Banner-toggle-theme.png']
-authors: ['Anderson André']
 ---
 
 # Introdução
