feat: add banner

--- a/data/blog/toggle-theme.mdx
+++ b/data/blog/toggle-theme.mdx
@@ -8,6 +8,14 @@ summary: 'Neste post, vamos explorar como fazer uma aplicação em Next.Js com u
 images: ['/static/images/toggle-theme/Banner-toggle-theme.png']
 ---
 
+<Image
+  alt={`Toggle Theme Banner`}
+  src={`/static/images/toggle-theme/Banner-toggle-theme.png`}
+  width={1980 / 2}
+  height={1114 / 2}
+  priority
+/>
+
 # Introdução
 
 Neste tutorial, vamos aprender como criar uma aplicação com suporte a light e dark theme utilizando Next.js, uma poderosa estrutura de desenvolvimento web baseada em React. Além disso, iremos utilizar o Styled Components para estilizar os componentes da aplicação e o Tailwind CSS para facilitar a criação de estilos responsivos.
