fix: remove unused post blogs

--- a/data/blog/introduction_sql.mdx
+++ b/data/blog/introduction_sql.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introdução ao SQL → o que é, como funciona e por que é essencial para gerenciar dados
+title: Introdução ao SQL - o que é, como funciona e por que é essencial para gerenciar dados
 date: '2023-02-23'
 tags: ['SQL', 'Banco de dados']
 draft: false
