--- a/data/blog/understanding-docker.mdx
+++ b/data/blog/understanding-docker.mdx
@@ -1,5 +1,5 @@
 ---
-title: Entendendo o Docker → a plataforma de virtualização de contêineres que revoluciona o desenvolvimento de aplicativos
+title: Entendendo o Docker - a plataforma de virtualização de contêineres que revoluciona o desenvolvimento de aplicativos
 date: '2023-02-20'
 tags: ['Docker', 'Virtualização']
 draft: false
