fix: add banner in post

--- a/data/blog/dio-http-flutter.mdx
+++ b/data/blog/dio-http-flutter.mdx
@@ -1,5 +1,5 @@
 ---
-title: Como consumir APIs no Flutter utilizando Dio e HTTP
+title: 'Como consumir APIs no Flutter utilizando Dio e HTTP'
 summary: 'Consumir APIs é uma prática comum para desenvolvedores, facilitando o compartilhamento de dados externos com suas aplicações, desde informações de usuários em nuvens até transações financeiras. No contexto do ecossistema Flutter, a biblioteca Dio se destaca como uma escolha popular para realizar requisições HTTP, proporcionando robustez. Este artigo explora estratégias eficazes para enfrentar desafios e lidar com erros ao consumir APIs usando o Dio.'
 tags: ['Flutter', 'Dio', 'HTTP']
 authors: ['default']
