fix: add references

--- a/data/blog/professional-programmers.mdx
+++ b/data/blog/professional-programmers.mdx
@@ -87,6 +87,6 @@ Essa é a primeira parte do que eu acho que é essencial um programador ter em m
 
 Vale eu fazer uma sugestão de leitura aqui, recomendo o livro "The Clean Coder" do Uncle Bob, vale a pena pois ele mostra a visão dele do que é necessário e eu me basiei um pouco no livro para escrever essa publicação com minhas próprias palavras!
 
-# Referências
+## Referências
 
-[aa](aaa)
+[The Clean Coder](https://a.co/d/dUkyBkg)
